tests/expectations/parser/program/stub_fail.out
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> test:5:2
     |
   5 | }stub credits.aleo {
     |  ^^^^
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> test:46:2
     |
  46 | }finalize foo() {
     |  ^^^^^^^^
